#!/usr/bin/env python3
import hashlib
import json
import logging
import numpy as np
import os
import time
from datetime import datetime
from typing import Any, Dict, List

# Setup logging
logging.basicConfig(level=logging.INFO, format='%(asctime)s - %(levelname)s - %(message)s')
logger = logging.getLogger(__name__)


class VectorDatabase:
    """Simplified vector database simulation"""

    def __init__(self, embedding_dim=384):
        self.embedding_dim = embedding_dim
        self.documents = {}
        self.embeddings = {}
        self.index = {}

    def add_document(self, doc_id: str, content: str, metadata: Dict = None):
        """Add document to the database"""
        self.documents[doc_id] = {
            'content': content,
            'metadata': metadata or {},
            'created_at': datetime.now().isoformat()
        }

        # Generate simulated embedding
        embedding = self._generate_embedding(content)
        self.embeddings[doc_id] = embedding

        logger.info(f"Added document {doc_id} to vector database")

    def _generate_embedding(self, text: str) -> np.ndarray:
        """Generate simulated embedding for text"""
        # Simple hash-based embedding simulation
        hash_obj = hashlib.md5(text.encode())
        hash_bytes = hash_obj.digest()

        # Convert to float array and normalize
        embedding = np.frombuffer(hash_bytes[:self.embedding_dim // 8], dtype=np.uint8)
        embedding = embedding.astype(np.float32)
        embedding = embedding / np.linalg.norm(embedding)

        # Pad to desired dimension
        if len(embedding) < self.embedding_dim:
            padding = np.random.normal(0, 0.1, self.embedding_dim - len(embedding))
            embedding = np.concatenate([embedding, padding])

        return embedding[:self.embedding_dim]

    def search(self, query: str, top_k: int = 5) -> List[Dict]:
        """Search for similar documents"""
        query_embedding = self._generate_embedding(query)

        # Calculate similarities
        similarities = {}
        for doc_id, doc_embedding in self.embeddings.items():
            similarity = np.dot(query_embedding, doc_embedding)
            similarities[doc_id] = similarity

        # Sort by similarity
        sorted_docs = sorted(similarities.items(), key=lambda x: x[1], reverse=True)

        # Return top-k results
        results = []
        for doc_id, similarity in sorted_docs[:top_k]:
            results.append({
                'doc_id': doc_id,
                'similarity': float(similarity),
                'content': self.documents[doc_id]['content'],
                'metadata': self.documents[doc_id]['metadata']
            })

        return results


class RAGSystem:
    """Retrieval-Augmented Generation System"""

    def __init__(self, config):
        self.config = config
        self.vector_db = VectorDatabase(embedding_dim=config.get('embedding_dim', 384))
        self.cache_dir = '/volumes/ai-cache'
        self.output_dir = '/volumes/ai-outputs'
        self.metrics_dir = '/volumes/ai-metrics'

        # Create directories if volumes exist
        for dir_path in [self.cache_dir, self.output_dir, self.metrics_dir]:
            if os.path.exists('/volumes'):
                os.makedirs(dir_path, exist_ok=True)

        self.metrics = {
            'queries_processed': 0,
            'documents_retrieved': 0,
            'cache_hits': 0,
            'total_response_time': 0,
            'start_time': datetime.now().isoformat()
        }

        # Initialize with sample knowledge base
        self._initialize_knowledge_base()

        logger.info("RAG System initialized")

    def _initialize_knowledge_base(self):
        """Initialize with sample documents"""
        sample_documents = [
            {
                'id': 'doc_001',
                'content': """Machine Learning Deployment Strategies

Production deployment of machine learning models requires careful consideration of several factors:

1. Model Serving Architecture: Choose between real-time inference (REST APIs, gRPC) and batch processing depending on use case requirements.

2. Scalability: Implement auto-scaling based on request volume and latency requirements. Consider using container orchestration platforms like Kubernetes.

3. Model Versioning: Maintain multiple model versions to enable rollbacks and A/B testing. Use tools like MLflow or DVC for version control.

4. Monitoring: Track model performance, data drift, and system metrics. Set up alerts for anomalies and degradation.

5. Security: Implement authentication, encryption, and access controls for model endpoints and data pipelines.""",
                'metadata': {'category': 'ml_ops', 'author': 'AI Team', 'date': '2024-01-15'}
            },
            {
                'id': 'doc_002',
                'content': """Artificial Intelligence Ethics Guidelines

Ethical AI development requires adherence to key principles:

1. Fairness: Ensure AI systems do not discriminate against protected groups. Regularly audit for bias in training data and model outcomes.

2. Transparency: Make AI decision-making processes interpretable and explainable to stakeholders and end users.

3. Privacy: Implement privacy-preserving techniques like differential privacy and federated learning to protect sensitive data.

4. Accountability: Establish clear responsibility chains for AI system decisions and outcomes.

5. Robustness: Build resilient systems that handle edge cases and adversarial inputs gracefully.

6. Oversight: Maintain meaningful control over critical AI decisions.""",
                'metadata': {'category': 'ai_ethics', 'author': 'Ethics Committee', 'date': '2024-02-01'}
            },
            {
                'id': 'doc_003',
                'content': """Vector Databases for AI Applications

Vector databases are essential for modern AI applications requiring semantic search and similarity matching:

Key Features:
- High-dimensional vector storage and indexing
- Approximate nearest neighbor (ANN) search algorithms
- Horizontal scaling for large datasets
- Integration with machine learning pipelines

Popular Solutions:
1. Pinecone: Managed vector database with easy API integration
2. Weaviate: Open-source vector database with GraphQL interface
3. Milvus: Scalable vector database for production workloads
4. Chroma: Lightweight vector database for prototyping

Use Cases:
- Semantic search and document retrieval
- Recommendation systems
- Image and audio similarity search
- Fraud detection and anomaly detection""",
                'metadata': {'category': 'vector_db', 'author': 'Data Engineering', 'date': '2024-01-20'}
            },
            {
                'id': 'doc_004',
                'content': """Large Language Model Fine-tuning Best Practices

Fine-tuning LLMs for specific tasks requires careful approach:

1. Data Preparation:
   - Curate high-quality, task-specific training data
   - Balance dataset to avoid bias amplification
   - Use proper formatting for instruction-following models

2. Training Strategy:
   - Start with smaller learning rates (1e-5 to 1e-4)
   - Use gradient accumulation for effective larger batch sizes
   - Implement early stopping to prevent overfitting

3. Evaluation:
   - Use held-out validation sets for hyperparameter tuning
   - Implement task-specific evaluation metrics
   - Test for harmful outputs and safety concerns

4. Resource Management:
   - Use mixed precision training to reduce memory usage
   - Consider parameter-efficient fine-tuning (LoRA, adapters)
   - Monitor GPU utilization and optimize batch sizes""",
                'metadata': {'category': 'llm_training', 'author': 'ML Research', 'date': '2024-02-10'}
            },
            {
                'id': 'doc_005',
                'content': """Agentic AI System Architecture

Building autonomous AI agents requires robust system design:

Core Components:
1. Planning Module: Break down complex tasks into executable steps
2. Memory System: Maintain context and learning across interactions
3. Tool Integration: Connect to external APIs and databases
4. Reasoning Engine: Make decisions based on available information

Architecture Patterns:
- ReAct (Reasoning + Acting): Interleave reasoning and action steps
- Chain-of-Thought: Break complex reasoning into step-by-step process
- Multi-agent Coordination: Orchestrate specialized agents for complex tasks

Implementation Considerations:
- Error handling and recovery mechanisms
- Resource allocation and rate limiting
- Security and sandboxing of agent actions
- Monitoring and observability of agent behavior""",
                'metadata': {'category': 'agentic_ai', 'author': 'AI Architecture', 'date': '2024-02-15'}
            }
        ]

        for doc in sample_documents:
            self.vector_db.add_document(doc['id'], doc['content'], doc['metadata'])

        logger.info(f"Initialized knowledge base with {len(sample_documents)} documents")

    def retrieve_context(self, query: str, top_k: int = 3) -> List[Dict]:
        """Retrieve relevant context for query"""
        logger.info(f"Retrieving context for query: {query[:50]}...")

        start_time = time.time()
        results = self.vector_db.search(query, top_k=top_k)
        retrieval_time = time.time() - start_time

        self.metrics['documents_retrieved'] += len(results)

        logger.info(f"Retrieved {len(results)} documents in {retrieval_time:.3f}s")

        return results

    def generate_response(self, query: str, context: List[Dict]) -> Dict:
        """Generate response using retrieved context"""
        logger.info("Generating response with retrieved context...")

        # Simulate LLM generation
        time.sleep(1.5)  # Simulate generation time

        # Extract relevant information from context
        context_snippets = []
        sources = []

        for doc in context:
            # Extract relevant sentences (simplified)
            sentences = doc['content'].split('.')[:3]  # Take first 3 sentences
            context_snippets.extend(sentences)
            sources.append({
                'doc_id': doc['doc_id'],
                'similarity': doc['similarity'],
                'metadata': doc['metadata']
            })

        # Generate contextual response
        if "deployment" in query.lower():
            response_text = f"""Based on the retrieved documentation, here are key considerations for ML model deployment:

**Deployment Architecture:**
{context_snippets[0] if context_snippets else 'Consider real-time vs batch processing requirements'}

**Scalability & Monitoring:**
- Implement auto-scaling based on request volume
- Track model performance and data drift
- Set up comprehensive monitoring and alerting

**Best Practices:**
- Use container orchestration (Kubernetes) for scalability
- Implement proper model versioning and rollback capabilities
- Ensure security with authentication and encryption

**Specific Recommendations:**
- Start with a simple REST API deployment
- Gradually add complexity as requirements grow
- Monitor system performance and user feedback closely

This guidance is synthesized from the most relevant documentation in our knowledge base."""

        elif "ethics" in query.lower() or "responsible" in query.lower():
            response_text = f"""Ethical AI development is crucial for responsible deployment. Key principles include:

**Core Principles:**
{context_snippets[1] if len(context_snippets) > 1 else 'Fairness, transparency, and accountability are fundamental'}

**Implementation Guidelines:**
- Regular bias auditing of training data and model outputs
- Implement interpretability and explainability features
- Establish clear accountability chains for AI decisions
- Maintain meaningful oversight for critical decisions

**Privacy & Security:**
- Use privacy-preserving techniques like differential privacy
- Implement robust security measures for model endpoints
- Ensure compliance with data protection regulations

This guidance helps ensure AI systems are developed and deployed responsibly."""

        elif "vector" in query.lower() or "database" in query.lower():
            response_text = f"""Vector databases are essential for modern AI applications requiring semantic search:

**Key Capabilities:**
{context_snippets[2] if len(context_snippets) > 2 else 'High-dimensional vector storage and similarity search'}

**Popular Solutions:**
- Pinecone: Managed solution with easy integration
- Weaviate: Open-source with GraphQL interface  
- Milvus: Scalable for production workloads
- Chroma: Lightweight for prototyping

**Use Cases:**
- Semantic search and document retrieval (like this RAG system)
- Recommendation systems
- Content similarity matching
- Anomaly detection

Choose based on your scale, budget, and integration requirements."""

        else:
            response_text = f"""Based on the retrieved context from our knowledge base:

**Key Information:**
{context_snippets[0][:200] + '...' if context_snippets else 'General AI and ML information available'}

**Additional Context:**
The retrieved documents provide detailed information about AI/ML best practices, deployment strategies, and system architecture considerations.

**Recommendations:**
- Review the source documents for detailed implementation guidance
- Consider the specific requirements of your use case
- Follow established best practices for production deployment

For more specific guidance, please refine your query to focus on particular aspects like deployment, ethics, or technical implementation."""

        return {
            'query': query,
            'response': response_text,
            'sources': sources,
            'context_used': len(context),
            'generated_at': datetime.now().isoformat()
        }

    def query(self, query: str, top_k: int = 3) -> Dict:
        """Process complete RAG query"""
        start_time = time.time()

        # Check cache first
        cache_key = hashlib.md5(f"{query}:{top_k}".encode()).hexdigest()
        cached_response = self._get_cached_response(cache_key)
        if cached_response:
            self.metrics['cache_hits'] += 1
            return cached_response

        # Retrieve relevant context
        context = self.retrieve_context(query, top_k)

        # Generate response
        response = self.generate_response(query, context)

        # Add metadata
        response['processing_time'] = time.time() - start_time
        response['cache_key'] = cache_key

        # Cache response
        self._cache_response(cache_key, response)

        # Update metrics
        self.metrics['queries_processed'] += 1
        self.metrics['total_response_time'] += response['processing_time']

        logger.info(f"Query processed in {response['processing_time']:.2f}s")

        return response

    def _get_cached_response(self, cache_key: str) -> Dict:
        """Get cached response if available"""
        if not os.path.exists(self.cache_dir):
            return None

        cache_file = os.path.join(self.cache_dir, f"rag_{cache_key}.json")
        if os.path.exists(cache_file):
            with open(cache_file, 'r') as f:
                cached = json.load(f)
                logger.info(f"Cache hit for query")
                return cached
        return None

    def _cache_response(self, cache_key: str, response: Dict):
        """Cache response for future use"""
        if os.path.exists(self.cache_dir):
            cache_file = os.path.join(self.cache_dir, f"rag_{cache_key}.json")
            with open(cache_file, 'w') as f:
                json.dump(response, f, indent=2)

    def run_demo(self):
        """Run RAG system demonstration"""
        logger.info("Starting RAG System Demo")

        # Sample queries for demonstration
        demo_queries = [
            "How should I deploy machine learning models in production?",
            "What are the key principles of ethical AI development?",
            "Which vector database should I use for my AI application?",
            "What are best practices for fine-tuning large language models?",
            "How do I build an agentic AI system?",
            "What monitoring should I implement for ML models?"
        ]

        results = []
        for query in demo_queries:
            logger.info(f"Processing query: {query}")
            result = self.query(query)
            results.append(result)

            # Brief pause between queries
            time.sleep(0.5)

        # Save results
        demo_results = {
            'demo_id': f"rag_demo_{int(time.time())}",
            'completed_at': datetime.now().isoformat(),
            'queries_processed': len(results),
            'results': results,
            'system_metrics': self.metrics
        }

        if os.path.exists(self.output_dir):
            output_file = os.path.join(self.output_dir, f'rag_demo_results_{int(time.time())}.json')
            with open(output_file, 'w') as f:
                json.dump(demo_results, f, indent=2)
            logger.info(f"Demo results saved to {output_file}")

        # Save metrics
        if os.path.exists(self.metrics_dir):
            metrics_file = os.path.join(self.metrics_dir, f'rag_metrics_{int(time.time())}.json')
            with open(metrics_file, 'w') as f:
                json.dump(self.metrics, f, indent=2)

        # Display summary
        print("\n" + "=" * 50)
        print("RAG SYSTEM DEMO SUMMARY")
        print("=" * 50)
        print(f"Queries processed: {self.metrics['queries_processed']}")
        print(f"Documents retrieved: {self.metrics['documents_retrieved']}")
        print(f"Cache hits: {self.metrics['cache_hits']}")

        if self.metrics['queries_processed'] > 0:
            avg_time = self.metrics['total_response_time'] / self.metrics['queries_processed']
            print(f"Average response time: {avg_time:.2f}s")

            hit_ratio = self.metrics['cache_hits'] / self.metrics['queries_processed'] * 100
            print(f"Cache hit ratio: {hit_ratio:.1f}%")

        print(f"Knowledge base size: {len(self.vector_db.documents)} documents")

        # Show sample results
        print(f"\nSample Query Result:")
        if results:
            sample = results[0]
            print(f"Q: {sample['query']}")
            print(f"A: {sample['response'][:200]}...")
            print(f"Sources: {len(sample['sources'])} documents")

        return demo_results


if __name__ == "__main__":
    # Configuration for RAG system
    config = {
        'embedding_dim': 384,
        'max_context_length': 2000,
        'cache_enabled': True,
        'vector_db': {
            'similarity_threshold': 0.7,
            'max_results': 10
        }
    }

    # Initialize and run RAG system
    rag_system = RAGSystem(config)
    results = rag_system.run_demo()

    logger.info("RAG System demo completed successfully")
