package jobs

import (
	"context"
	"encoding/json"
	"fmt"
	pb "joblet/api/gen"
	"joblet/internal/rnx/common"
	"os"
	"strconv"
	"strings"
	"time"

	"github.com/spf13/cobra"
)

func NewStatusCmd() *cobra.Command {
	cmd := &cobra.Command{
		Use:   "status <id>",
		Short: "Get the status of a job or workflow by ID",
		Long:  "Get the status of a job (string ID) or workflow (numeric ID)",
		Args:  cobra.ExactArgs(1),
		RunE:  runStatus,
	}

	return cmd
}

func runStatus(cmd *cobra.Command, args []string) error {
	id := args[0]

	// First, try as job ID
	jobErr := getJobStatus(id)
	if jobErr == nil {
		return nil
	}

	// If job lookup fails and ID is numeric, try as workflow ID
	if workflowID, parseErr := strconv.Atoi(id); parseErr == nil {
		workflowErr := getWorkflowStatus(workflowID)
		if workflowErr == nil {
			return nil
		}
		// If both fail, return workflow error for numeric IDs
		return workflowErr
	}

	// For non-numeric IDs, return job error
	return jobErr
}

func getJobStatus(jobID string) error {
	jobClient, err := common.NewJobClient()
	if err != nil {
		return fmt.Errorf("failed to create client: %w", err)
	}
	defer jobClient.Close()

	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	response, err := jobClient.GetJobStatus(ctx, jobID)
	if err != nil {
		return fmt.Errorf("failed to get job status: %v", err)
	}

	if common.JSONOutput {
		return outputJobStatusJSON(response)
	}

	// Display basic job information
	fmt.Printf("Job ID: %s\n", response.Id)
	fmt.Printf("Command: %s %s\n", response.Command, strings.Join(response.Args, " "))
	fmt.Printf("Status: %s\n", response.Status)

	// Display scheduling information if available
	if response.ScheduledTime != "" {
		fmt.Printf("\nScheduling Information:\n")

		scheduledTime, err := time.Parse("2006-01-02T15:04:05Z07:00", response.ScheduledTime)
		if err == nil {
			fmt.Printf("  Scheduled Time: %s\n", scheduledTime.Format("2006-01-02 15:04:05 MST"))

			// Show time until execution for scheduled jobs
			if response.Status == "SCHEDULED" {
				now := time.Now()
				if scheduledTime.After(now) {
					duration := scheduledTime.Sub(now)
					fmt.Printf("  Time Until Execution: %s\n", formatDuration(duration))
				} else {
					fmt.Printf("  Time Until Execution: Due now (waiting for execution)\n")
				}
			}
		} else {
			fmt.Printf("  Scheduled Time: %s\n", response.ScheduledTime)
		}
	}

	// Display timing information
	fmt.Printf("\nTiming:\n")
	fmt.Printf("  Created: %s\n", formatTimestamp(response.StartTime))

	if response.EndTime != "" {
		fmt.Printf("  Ended: %s\n", formatTimestamp(response.EndTime))

		// Calculate duration for completed jobs
		startTime, startErr := time.Parse("2006-01-02T15:04:05Z07:00", response.StartTime)
		endTime, endErr := time.Parse("2006-01-02T15:04:05Z07:00", response.EndTime)
		if startErr == nil && endErr == nil {
			duration := endTime.Sub(startTime)
			fmt.Printf("  Duration: %s\n", formatDuration(duration))
		}
	} else if response.Status == "RUNNING" {
		startTime, err := time.Parse("2006-01-02T15:04:05Z07:00", response.StartTime)
		if err == nil {
			duration := time.Since(startTime)
			fmt.Printf("  Running For: %s\n", formatDuration(duration))
		}
	}

	// Display resource limits
	fmt.Printf("\nResource Limits:\n")
	fmt.Printf("  Max CPU: %d%%\n", response.MaxCPU)
	fmt.Printf("  Max Memory: %d MB\n", response.MaxMemory)
	fmt.Printf("  Max IO BPS: %d\n", response.MaxIOBPS)
	if response.CpuCores != "" {
		fmt.Printf("  CPU Cores: %s\n", response.CpuCores)
	}

	// Display exit code for completed jobs
	if response.Status != "RUNNING" && response.Status != "SCHEDULED" && response.Status != "INITIALIZING" {
		fmt.Printf("\nResult:\n")
		fmt.Printf("  Exit Code: %d\n", response.ExitCode)
	}

	// Provide helpful next steps based on job status
	fmt.Printf("\nAvailable Actions:\n")
	switch response.Status {
	case "SCHEDULED":
		fmt.Printf("  • rnx stop %s     # Cancel scheduled job\n", response.Id)
		fmt.Printf("  • rnx status %s   # Check status again\n", response.Id)
	case "RUNNING":
		fmt.Printf("  • rnx log %s      # Stream live logs\n", response.Id)
		fmt.Printf("  • rnx stop %s     # Stop running job\n", response.Id)
	case "COMPLETED", "FAILED", "STOPPED":
		fmt.Printf("  • rnx log %s      # View job logs\n", response.Id)
	default:
		fmt.Printf("  • rnx log %s      # View job logs\n", response.Id)
		fmt.Printf("  • rnx stop %s     # Stop job if running\n", response.Id)
	}

	return nil
}

// formatTimestamp formats a timestamp string for display
func formatTimestamp(timestamp string) string {
	if timestamp == "" {
		return "Not available"
	}

	t, err := time.Parse("2006-01-02T15:04:05Z07:00", timestamp)
	if err != nil {
		return timestamp // Return as-is if parsing fails
	}

	return t.Format("2006-01-02 15:04:05 MST")
}

// formatDuration formats a duration for human-readable display
func formatDuration(d time.Duration) string {
	if d < time.Minute {
		return fmt.Sprintf("%.1fs", d.Seconds())
	} else if d < time.Hour {
		return fmt.Sprintf("%.1fm", d.Minutes())
	} else if d < 24*time.Hour {
		hours := int(d.Hours())
		minutes := int(d.Minutes()) % 60
		if minutes == 0 {
			return fmt.Sprintf("%dh", hours)
		}
		return fmt.Sprintf("%dh%dm", hours, minutes)
	} else {
		days := int(d.Hours()) / 24
		hours := int(d.Hours()) % 24
		if hours == 0 {
			return fmt.Sprintf("%dd", days)
		}
		return fmt.Sprintf("%dd%dh", days, hours)
	}
}

// outputJobStatusJSON outputs the job status in JSON format
func outputJobStatusJSON(response *pb.GetJobStatusRes) error {
	// Use the protobuf's native JSON marshaling to preserve field names and see the actual data
	encoder := json.NewEncoder(os.Stdout)
	encoder.SetIndent("", "  ")
	return encoder.Encode(response)
}

// getWorkflowStatus retrieves and displays workflow status
func getWorkflowStatus(workflowID int) error {
	client, err := common.NewJobClient()
	if err != nil {
		return fmt.Errorf("failed to create client: %w", err)
	}
	defer client.Close()

	// Create workflow service client
	workflowClient := pb.NewJobServiceClient(client.GetConn())

	req := &pb.GetWorkflowStatusRequest{
		WorkflowId: int32(workflowID),
	}

	ctx, cancel := context.WithTimeout(context.Background(), 10*time.Second)
	defer cancel()

	res, err := workflowClient.GetWorkflowStatus(ctx, req)
	if err != nil {
		return fmt.Errorf("failed to get workflow status: %w", err)
	}

	if common.JSONOutput {
		return outputWorkflowStatusJSON(res)
	}

	workflow := res.Workflow
	fmt.Printf("Workflow Status:\n")
	fmt.Printf("  ID: %d\n", workflow.Id)
	fmt.Printf("  Name: %s\n", workflow.Name)
	fmt.Printf("  Workflow: %s\n", workflow.Workflow)
	fmt.Printf("  Status: %s\n", workflow.Status)
	fmt.Printf("  Progress: %d/%d jobs completed\n", workflow.CompletedJobs, workflow.TotalJobs)
	fmt.Printf("  Failed: %d\n", workflow.FailedJobs)

	if len(res.Jobs) > 0 {
		fmt.Printf("\nJobs:\n")
		for _, job := range res.Jobs {
			fmt.Printf("  - %s: %s\n", job.JobId, job.Status)
			if len(job.Dependencies) > 0 {
				fmt.Printf("    Dependencies: %v\n", job.Dependencies)
			}
		}
	}

	return nil
}

// outputWorkflowStatusJSON outputs workflow status in JSON format
func outputWorkflowStatusJSON(res *pb.GetWorkflowStatusResponse) error {
	// Convert protobuf workflow status to JSON structure
	statusData := map[string]interface{}{
		"id":             res.Workflow.Id,
		"name":           res.Workflow.Name,
		"workflow":       res.Workflow.Workflow,
		"status":         res.Workflow.Status,
		"total_jobs":     res.Workflow.TotalJobs,
		"completed_jobs": res.Workflow.CompletedJobs,
		"failed_jobs":    res.Workflow.FailedJobs,
		"created_at":     res.Workflow.CreatedAt,
		"started_at":     res.Workflow.StartedAt,
		"completed_at":   res.Workflow.CompletedAt,
		"jobs":           make([]map[string]interface{}, 0, len(res.Jobs)),
	}

	// Add job details
	for _, job := range res.Jobs {
		jobData := map[string]interface{}{
			"name":   job.JobId,
			"status": job.Status,
		}
		if len(job.Dependencies) > 0 {
			jobData["dependencies"] = job.Dependencies
		}
		statusData["jobs"] = append(statusData["jobs"].([]map[string]interface{}), jobData)
	}

	encoder := json.NewEncoder(os.Stdout)
	encoder.SetIndent("", "  ")
	return encoder.Encode(statusData)
}
